# dumbbell-form-analyzer

./: BENCHMARK_RESULTS.md  README.md  run_local.sh  test_with_video.py
backend/: Dockerfile  fly.toml  pyproject.toml
backend/app/: main.py
frontend/: .env  package-lock.json  package.json
frontend/src/: App.tsx
mobile/: README.md  package-lock.json  package.json
mobile/DumbbellCurlAnalyzer/: App.tsx  app.json  metro.config.js  package-lock.json  package.json
mobile/DumbbellCurlAnalyzer/components/: CameraView.js  StatsDisplay.js
mobile/DumbbellCurlAnalyzer/services/: FormAnalyzer.js  PoseDetectionService.js  VoiceFeedbackService.js
